Fix z-index for mobile dropdown [SCI-8594]

--- a/app/assets/stylesheets/experiments.scss
+++ b/app/assets/stylesheets/experiments.scss
@@ -16,7 +16,7 @@
     width: 36px;
 
     .dropdown-menu {
-      z-index: 9;
+      z-index: 102;
 
       a,
       button {
@@ -27,6 +27,10 @@
           margin-right: .4em;
         }
       }
+    }
+
+    .dropdown-backdrop {
+      z-index: 101;
     }
   }
 
