--- a/app/assets/stylesheets/my_modules/protocols/index.scss
+++ b/app/assets/stylesheets/my_modules/protocols/index.scss
@@ -58,6 +58,10 @@
     .dropdown-menu {
       z-index: 102;
     }
+
+    .dropdown-backdrop {
+      z-index: 101;
+    }
   }
 }
 
