--- a/app/assets/stylesheets/protocols/protocol.scss
+++ b/app/assets/stylesheets/protocols/protocol.scss
@@ -35,6 +35,10 @@
     z-index: 102;
   }
 
+  .dropdown-backdrop {
+    z-index: 101;
+  }
+
   .protocol-section {
     margin: 16px 0 16px -20px;
 
